<resources>
    <string name="app_name">SaborApp</string>
    <string name="all">TODO</string>
    <string name="name">LOREM VII remake</string>
    <string name="date">30 de noviembre de 2021</string>
    <string name="cooking_time">Tiempo de preparación</string>
    <string name="title_activity_main">SaborApp</string>
    <string name="subtitle_activity_main">Para editar una receta, manténgala presionada.\nPara borrar una receta, deslícela hacia los lados.</string>
    <string name="title_activity_add">Nueva Receta</string>
    <string name="title_activity_edit">Datos de la receta</string>
    <string name="name_form">Nombre</string>
    <string name="portions_form_tittle">Tiempo (min)</string>
    <string name="portions_form">Tiempo</string>
    <string name="url_form">Url imagen</string>
    <string name="description_form">Ingredientes e instrucciones</string>
    <string name="description_form_tittle">Descripción</string>
    <string name="save">Guardar</string>
    <string name="no_account">¿Aún no tienes cuenta? <b>Registrate</b></string>
    <string name="description">Lorem es una franquicia de medios creada por Hironobu Sakaguchi y desarrollada por Square Enix. La franquicia se centra en una serie de fantasía y ciencia ficción de videojuegos RPG.</string>

    <string name="title_recipe">Mis Recetas</string>
    <string name="title_profile">Mi Perfil</string>
    <string name="title_about">Acerca De</string>

    <!-- About us activity -->
    <string name="img_about">Background</string>
    <string name="tv_about_description" formatted="true">"Somos el App que te da recetas deliciosas, nutritivas y consistentes. Desde smoothies hasta sopas, postres y antojos típicos, SaborApp te guiará paso a paso hasta un perfecto resultado cada vez. En nuestra última actualización, incluimos las sugerencias hechas por nuestros usuarios.\n¡Déjate sorprender!\n"</string>
    <string name="tv_developers_tittle">Desarrolladores</string>
    <string name="tv_developers_description">
            Lizeth Paola Delgadillo\n
            Diana Salamanca\n
            Adriana Collazos\n
            Jorge Vargas\n\n</string>
    <string name="tv_address_tittle">¿Dónde estamos ubicados?</string>
    <string name="tv_address_description">
            Local 11-4\n
            Centro Comercial SantaFe\n
            Bogotá, Colombia
    </string>

</resources>