<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="views.ui.about.AboutFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:background="@drawable/aboutus_back"
        android:contentDescription="@string/img_about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAboutApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/lobster_regular"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvAboutDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/tv_about_description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAboutTittleDev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster_regular"
            android:text="@string/tv_developers_tittle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAboutDevelopers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/tv_developers_description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAboutTittleAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster_regular"
            android:text="@string/tv_address_tittle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAboutAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/tv_address_description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

</FrameLayout>
