<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnRecipe"
        android:text="Menú"
        android:layout_marginBottom="20dp"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/gray2"/>

    <Button
        android:id="@+id/btnRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_recipe"
        android:layout_above="@id/btnProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        android:layout_centerInParent="true"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_about"
        android:layout_below="@+id/btnProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/white"/>

</RelativeLayout>